syntax = "proto3";

message EmptyRequest {}

message SuccessMessageResponse {
    message success_message {
        string message = 1;
    }
    success_message data = 2;
}

// The request message containing the user's name
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
